# Cf-helper

./: .gitignore  README.md  main.py  pyproject.toml  start.sh
backend/: auth.py  cf_client.py  database.py  main.py  models.py  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: FilterPanel.css  FilterPanel.jsx  Navbar.css  Navbar.jsx  NoteModal.css  NoteModal.jsx  NotePreview.jsx  ProblemRow.css  ProblemRow.jsx
frontend/src/context/: AppContext.jsx  AuthContext.jsx  ProblemsContext.jsx
frontend/src/pages/: BookmarksPage.css  BookmarksPage.jsx  CompilerPage.css  CompilerPage.css.bak  CompilerPage.jsx  CompilerPage.jsx.bak  ContestsPage.css  ContestsPage.jsx  ProblemsPage.css  ProblemsPage.jsx  SubmissionsPage.css  SubmissionsPage.jsx
frontend/src/services/: api.js
