[project]
name = "cf-helper"
version = "0.1.0"
description = "A personal Codeforces problem tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "httpx==0.27.0",
    "pydantic==2.11.1",
    "aiofiles==23.2.1",
    "requests==2.32.3",
    "google-auth==2.30.0",
    "PyJWT==2.8.0",
]
